--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-name:         Project or Site name (Architect Theme)
-tagline:      A responsive theme for your project on GitHub Pages
+name:         Projeto Encontrabilidade
+tagline:      Um projeto com Jekyll
 baseurl:      ""
 locale:       "en"
 
